more or less fixed desktop vs mobile layout issues

--- a/interactive-pricing-component-main/style.css
+++ b/interactive-pricing-component-main/style.css
@@ -1,6 +1,32 @@
-@media screen and (min-width: 380px) {
+@media screen and (min-width: 360px) {
+    .container {
 
+    }
+
+
+    .information{
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 3;
+        border-top: solid black 1px;
+    }
+
+    .page-views{
+        display: flex;
+        flex-flow: column;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        grid-column-start: 2;
+        grid-row-start: 1;
+    }
 }
+
 
 
 
@@ -8,7 +34,7 @@
 @media screen and (min-width: 780px) {
     .container {
         display: grid;
-        grid-template-columns: repeat(1, auto);
+        grid-template-columns: repeat(3, auto);
         grid-template-rows: repeat(2,auto);
         column-gap: 20%;
 
@@ -17,8 +43,42 @@
 
         display: grid;
         grid-template-columns: repeat(3,auto);
-        grid-template-rows: repeat(6,auto);
+        grid-template-rows: repeat(5,auto);
         gap: 10px 10px;
+    }
+
+    .page-views{
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-around;
+        align-content: center;
+        align-items: center;
+        grid-column-start: 2;
+        grid-row-start: 1;
+    }
+
+    .information{
+        display: flex;
+        flex-flow: row;
+        justify-content: space-around;
+        align-content: center;
+        align-items: center;
+        grid-column-start: 1;
+        grid-column-end: 4;
+        grid-row-start: 3;
+        border-top: solid black 1px;
+    }
+
+    .billing{
+        font-size: 1em;
+        display: flex;
+        flex-flow: row;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        grid-column-start: 2;
+        grid-row-start: 2;
+        flex-shrink: 0;
     }
 
 }
@@ -46,7 +106,7 @@ body {
 
     display: grid;
     grid-template-columns: repeat(3,auto);
-    grid-template-rows: repeat(6,auto);
+    grid-template-rows: repeat(3,auto);
     gap: 10px 10px;
 }
 
@@ -119,15 +179,7 @@ p:nth-child(1) {
 }
 
 
-.page-views{
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    grid-column-start: 2;
-    grid-row-start: 2;
-}
+
 /*.slider{*/
 /*    grid-column-start: 2;*/
 /*    grid-row-start: 3;*/
@@ -138,7 +190,7 @@ p:nth-child(1) {
     justify-content: center;
     align-content: center;
     align-items: center;
-    grid-column-start: 2;
+    grid-column-start: 1;
     grid-row-start: 3;
 }
 .billing{
@@ -149,7 +201,7 @@ p:nth-child(1) {
     align-content: center;
     align-items: center;
     grid-column-start: 2;
-    grid-row-start: 4;
+    grid-row-start: 2;
     flex-shrink: 0;
 }
 
@@ -158,17 +210,17 @@ p:nth-child(1) {
     margin: 1px;
 }
 
-.information{
-    display: flex;
-    flex-flow: column;
-    justify-content: center;
-    align-content: center;
-    align-items: center;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 5;
-    border-top: solid black 1px;
-}
+/*.information{*/
+/*    display: flex;*/
+/*    flex-flow: column;*/
+/*    justify-content: center;*/
+/*    align-content: center;*/
+/*    align-items: center;*/
+/*    grid-column-start: 1;*/
+/*    grid-column-end: 4;*/
+/*    grid-row-start: 3;*/
+/*    border-top: solid black 1px;*/
+/*}*/
 
 .card {
     grid-column-start: 2;
@@ -223,12 +275,12 @@ li {
 .toggle:after {
     content: '';
     position: absolute;
-    width: 25px;
-    height: 25px;
+    width: 20px;
+    height: 20px;
     border-radius: 1em;
     background-color: whitesmoke;
-    top: 0.5px;
-    left: 0.5px;
+    top: 2px;
+    left: 1px;
     transition: all 0.5s;
 
 
@@ -257,7 +309,7 @@ li {
     width: 150px;
     height: 4em;
     background-color: black;
-    box-shadow: white inset;
+    box-shadow: white inset 1px 1px;
     color: white;
     border-radius: 2em;
 }
@@ -309,6 +361,10 @@ input[type="range"]::-moz-range-thumb {
     background: url("./images/icon-slider.svg") no-repeat center aquamarine;
     color: whitesmoke;
 
+}
+
+#new-price {
+    font-size: 1.5em;
 }
 
 
